made rules page + minor glitch fix
Glitch Fix => blue highlight when selecting menu items on mobile. Fixed this my making the highlight transparent so it is not visible.

--- a/m/Css/index.css
+++ b/m/Css/index.css
@@ -3,6 +3,8 @@
         --main-height: 300vh;
       }
 body{
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -webkit-tap-highlight-color: transparent;
         height:var(--main-height);
         padding:0px;
         margin:0px;
